# mba_thesis

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
data/: .gitignore
data/0_external/: README.md
data/0_raw/: README.md
data/1_interim/: README.md
data/2_final/: README.md
docs/: index.md
docs/data_dictionaries/: README.md
docs/references/: README.md
docs/references/UCR/FilesAreInHere/introducingMERLIN/: MERLIN3_0.m  MERLIN3_1.m  discord_discovery_gemm3.m
mba_tcc/: README.md  run_pipe.py
mba_tcc/pipeline/: analyze.py  etl.py  predict.py  train.py
mba_tcc/pipeline/tasks/: __init__.py
mba_tcc/pipeline/tasks/analyze/: __init__.py  oneliner.py  sigma.py  zscore.py
mba_tcc/pipeline/tasks/etl/: fix.py  index.py  tag.py
mba_tcc/pipeline/tasks/predict/: oneliner.py  sigma.py  zscore.py
mba_tcc/pipeline/tasks/train/: __init__.py  oneliner.py  sigma.py  zscore.py
mba_tcc/tests/resources/: file_index_row.json
mba_tcc/utils/: config.py  datasets.py  plotting.py  transformation.py
notebooks/: 01__download_unzip.ipynb  README.md  analysis.ipynb  bruteforceYahooBatch.m  explorer.ipynb  oneliner.ipynb  run.ipynb
notebooks/draft/: Untitled.ipynb  create_test_resource.ipynb  inference__0_main.ipynb  inference__1_loading.ipynb  inference__2_train.ipynb  ml_draft_experiments.ipynb  results.csv  stub_pandas_6sigma.ipynb  stub_read_data.ipynb  stub_split_data.ipynb
pipelines/: .env  Pipfile  README.md  pipelines.py  requirements.txt  run_pipe.py
pipelines/mba_tcc/: etl.py
pipelines/mba_tcc/etl/: file_index.py  fix_file.py  split_file.py
pipelines/mba_tcc/tasks/: index.py  split.py
pipelines/mba_tcc/tasks/etl/: fix.py  index.py  split.py
pipelines/tests/: test_etl.py
pipelines/tests/etl/: test_file_index.py  test_fix.py  test_fix_file.py  test_index.py  test_split.py
pipelines/utils/: testing.py  transformation.py
serve/: README.md
src/: Pipfile  README.md  run_pipe.py
src/pipeline/: etl.py
src/pipeline/tasks/etl/: fix.py  index.py  split.py  tag.py
src/tests/etl/: test_fix.py  test_index.py  test_split.py  test_tag.py
src/utils/: config.py
tests/: conftest.py  test_resources.py  test_utils.py
tests/etl/: test_fix.py  test_index.py  test_tag.py
tests/resources/: file_index_row.json
